...
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changeCategory"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="changeTime"
            android:textColor="@color/colorPrimary"
            android:textSize="8pt" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RCView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:onClick="changeResult"
        android:textSize="8pt"
        android:text="@string/Result"/>
...
