<resources>
    <string name="app_name">CrossNote</string>

    //to remove
    <string name="title_activity_emom_timer">EmomTimerActivity</string>

    //Activity titles
    <string name="title_activity_main">Workouts</string>
    <string name="title_activity_add_training">Add workout</string>
    <string name="title_activity_add_motions">Add workout element</string>
    <string name="title_activity_share">Share workout</string>
    <string name="title_activity_view_training">Workout</string>
    <string name="title_activity_stopers">Stoper</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_emom_timer_loader">Choose EMOM</string>
    <string name="title_activity_test_emom_timer">EMOM timer</string>
    <string name="title_activity_calculator">PR calculator</string>
    <string name="title_activity_graph_test">Graph</string>
    <string name="title_activity_achievement_list">Achievements</string>
    <string name="title_activity_add_achievement">Add achievement</string>
    <string name="title_activity_add_record">Add new record</string>
    <string name="title_activity_view_achievement">ViewAchievementActivity</string>

    //activity_main_drawer
    <string name="nav_trainings">Workouts</string>
    <string name="nav_stoper">Stoper</string>
    <string name="nav_stoper_emom">EMOM timer</string>
    <string name="nav_achievement">Achievements</string>
    <string name="nav_info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="info_text">
        This application is a non-profit, hobby project designed to save your crossfit
        workouts and follow your progress. It will help you to calculate personal records and
        to share workouts with your friends.
    </string>
    <string name="info_email">
        <b><u>To contact me</u></b>
    </string>
    <string name="email_address">mailto:fluffynicebadger@gmail.com</string>
    <string name="undo">Undo</string>
    <string name="delete_item">Delete item?</string>
    <string name="Search">Search...</string>
    <string name="Empty">Empty</string>
    <string name="Zero">0</string>
    <string name="DoubleZero">00</string>
    <string name="Ten">10</string>
    <string name="Reset">Reset</string>
    <string name="Result">Result</string>
    <string name="Record">Record</string>
    <string name="Repetition">Repetition</string>
    <string name="Meters">Meters</string>
    <string name="Cals">Cals</string>
    <string name="IsMEoreThanOnElementInTheOneMinute">Is more than one element in the one minute?</string>
    <string name="LoadTraining">Load training</string>
    <string name="Finish">Finish!</string>
    <string name="WorkoutIsEmpty">Workout is empty</string>
    <string name="ROUND">round</string>
    <string name="ROUNDS">rounds</string>
    <string name="MINUTE">minute</string>
    <string name="MINUTES">minutes</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE">SAVE</string>
</resources>
