<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myApp.michal.crossNote.Activites.EmomTimer.EmomTimerActivity"
    tools:showIn="@layout/app_bar_emom_timer">

    <TextView
        android:id="@+id/textTrening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:text="@string/Ten"
        android:textSize="80sp"
        android:onClick="startTextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leftMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="350dp"/>

    <TextView
        android:id="@+id/resetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:onClick="reset"
        android:text="@string/Reset"
        android:textSize="20sp" />

</RelativeLayout>