<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background"
    tools:context="myApp.michal.crossNote.Activites.EmomTimer.LoaderEmomListViewActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/listLoader"
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <include
        layout="@layout/empty_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>